# pypath

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CNAME  CONTRIBUTING.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  build.sh  categorization_validation.yaml  changelog.html  contents.html  curl_to_download_manager_migration.md  features.html  genindex.html  index.html  installation.html  ltp_networks.py  mac-install-brew.sh  mac-install-conda.sh  mac-install-source.sh  mac-install.sh  mkdocs.yml  objects.inv  py-modindex.html  pypath_module_analysis_report.ipynb  pyproject.toml  reference.html  releasehistory.html  requirements.txt  result-10.yaml  result-6.yaml  result-8.yaml  search.html  searchindex.js  setup.cfg  (+9 more)
.agent/: omnipath-resources.csv
.agent/workflows/: translate-input-module.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_issue.md  pypath_issue.md
.github/workflows/: sphinx-build.yml
_autosummary/: pypath.core.annot.Adhesome.html  pypath.core.annot.Almen2009.html  pypath.core.annot.AnnotationBase.html  pypath.core.annot.AnnotationTable.html  pypath.core.annot.Baccin2019.html  pypath.core.annot.Biogps.html  pypath.core.annot.CancerGeneCensus.html  pypath.core.annot.Cancerdrugsdb.html  pypath.core.annot.Cancersea.html  pypath.core.annot.CellPhoneDB.html  pypath.core.annot.CellPhoneDBComplex.html  pypath.core.annot.CellSurfaceProteinAtlas.html  pypath.core.annot.CellSurfaceProteinAtlasCellType.html  pypath.core.annot.Cellcall.html  pypath.core.annot.Cellcellinteractions.html  pypath.core.annot.Cellchatdb.html  pypath.core.annot.CellchatdbComplex.html  pypath.core.annot.Cellinker.html  pypath.core.annot.CellinkerComplex.html  pypath.core.annot.Celltalkdb.html  pypath.core.annot.Celltypist.html  pypath.core.annot.Comppi.html  pypath.core.annot.Connectomedb.html  pypath.core.annot.Corum.html  pypath.core.annot.CorumFuncat.html  pypath.core.annot.CorumGO.html  pypath.core.annot.Cpad.html  pypath.core.annot.CustomAnnotation.html  pypath.core.annot.Cytosig.html  pypath.core.annot.Dgidb.html  pypath.core.annot.Disgenet.html  pypath.core.annot.Embrace.html  pypath.core.annot.Exocarta.html  pypath.core.annot.GOCustomIntercell.html  pypath.core.annot.GOIntercell.html  pypath.core.annot.Gpcrdb.html  pypath.core.annot.GuideToPharmacology.html  pypath.core.annot.HPO.html  pypath.core.annot.Hgnc.html  pypath.core.annot.HpmrComplex.html  (+1260 more)
_modules/: index.html  pypath.html
_modules/pypath/: inputs.html  omnipath.html  resources.html
_sources/: index.rst.txt  installation.rst.txt  reference.rst.txt
_sources/notebooks/: manual.ipynb.txt
_static/: documentation_options.js
_static/css/: pypathdocs.css
api/: pypath.core.annot.Adhesome.html  pypath.core.annot.Almen2009.html  pypath.core.annot.AnnotationBase.html  pypath.core.annot.AnnotationTable.html  pypath.core.annot.Baccin2019.html  pypath.core.annot.Biogps.html  pypath.core.annot.CancerGeneCensus.html  pypath.core.annot.Cancerdrugsdb.html  pypath.core.annot.Cancersea.html  pypath.core.annot.CellPhoneDB.html  pypath.core.annot.CellPhoneDBComplex.html  pypath.core.annot.CellSurfaceProteinAtlas.html  pypath.core.annot.CellSurfaceProteinAtlasCellType.html  pypath.core.annot.Cellcall.html  pypath.core.annot.Cellcellinteractions.html  pypath.core.annot.Cellchatdb.html  pypath.core.annot.CellchatdbComplex.html  pypath.core.annot.Cellinker.html  pypath.core.annot.CellinkerComplex.html  pypath.core.annot.Celltalkdb.html  pypath.core.annot.Celltypist.html  pypath.core.annot.Comppi.html  pypath.core.annot.Connectomedb.html  pypath.core.annot.Corum.html  pypath.core.annot.CorumFuncat.html  pypath.core.annot.CorumGO.html  pypath.core.annot.Cpad.html  pypath.core.annot.CustomAnnotation.html  pypath.core.annot.Cytosig.html  pypath.core.annot.Dgidb.html  pypath.core.annot.Disgenet.html  pypath.core.annot.Embrace.html  pypath.core.annot.Exocarta.html  pypath.core.annot.GOCustomIntercell.html  pypath.core.annot.GOIntercell.html  pypath.core.annot.Gpcrdb.html  pypath.core.annot.GuideToPharmacology.html  pypath.core.annot.HPO.html  pypath.core.annot.Hgnc.html  pypath.core.annot.HpmrComplex.html  (+1447 more)
dev/: biocypher
docs/: Makefile  conf.py  conf.py~  curl-to-dlmachine-migration.md  index.md  index.rst  index.rst~  installation.md  make.bat
docs/.doctrees/: index.doctree
docs/assets/: omnipath-theme.css
docs/doctrees/: changelog.doctree  environment.pickle  index.doctree  installation.doctree  main.doctree  reference.doctree  webservice.doctree
docs/html/: .buildinfo  changelog.html  genindex.html  index.html  installation.html  main.html  objects.inv  py-modindex.html  reference.html  search.html  (+2 more)
input_module_maintenance/: discover_input_modules.py  module_groups.md  module_test_status.md  modules.json  test_input_modules.py  todo.md  todo.txt  workflow.md
notebooks/: manual.html  manual.ipynb  omnipathr_drug_targets_tutorial.html  pypath_tutorial.ipynb
pypath/: __init__.py  _metadata.py  _version.py
r_import/: r_import.ipynb  r_import.r  r_import.rst
scripts/: biocypher_example.py  build.sh  export_omnipath_obo.py  export_reactome_pathway_obo.py  mac-install-conda.sh  server_test.py  static-tables.py  status-report.py
settings/: pypath_settings.yaml
src/: _sensitivity.py  analyses_all.py  barcharts.py  curl_tests.py  default_network.py  drawing_tests.py  drug_targets_sensitivity.py  figures_auto.py  figures_auto_3.py  figures_auto_int.py  figures_auto_new.py  functional.py  heatmap.r  ielm_testing.py  ltp_hpa_heatmap.r  mirna_testing.py  network-pickles.py  nussinov.py  pathway_figures.py  pw_int_re.py  pypath_build_networks.html  pypath_build_networks.ipynb  pypath_dorothea_demo.html  pypath_dorothea_demo.htmlE  pypath_dorothea_demo.ipynb  pypath_guide.html  references.py  remove_notebook_header.sh  resource_graph.py  resources.py  rolland2.py  sensitivity.py  server-runner-new.py  server-tests.py  webservice.rst
test/: test_cache.py  test_cancerdrugs_db.py  test_cv_terms.py  test_dorothea.py  test_inputs.py  test_settings.py
tests/: test_resource_names.py
(+1475 files in other folders)
