[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pypath-omnipath"
version = "0.14.18"
description = "Molecular signaling prior knowledge processing"
license = "GPL-3.0-only"
authors = [
    "Denes Turei <turei.denes@gmail.com>",
    "Nicolàs Palacio",
    "Sebastian Lobentanzer",
    "Olga Ivanova",
    "Erva Ulusoy",
    "Ahmet Rifaioglu",
    "Charles Tapley Hoyt"
]
packages = [
    { include = "pypath" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics"
]
repository = "https://github.com/saezlab/pypath"
homepage = "https://omnipathdb.org/"
readme = "README.rst"
keywords = [
    "systems biology",
    "molecular biology",
    "omics",
    "network",
    "signaling"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/saezlab/pypath/issues"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "*"
dill = "*"
future = "*"
glom = "*"
lxml = "*"
matplotlib = "*"
numpy = "*"
openpyxl = "*"
pandas = "*"
pycurl = "*"
pyreadr = "*"
PyYAML = "*"
rdata = "*"
requests = "*"
scipy = "*"
tabulate = "*"
timeloop = "*"
toml = "*"
tqdm = "*"
xlrd = "*"
pybel = { version = "*", optional = true }
bio2bel = { version = "*", optional = true }
click = { version = "*", optional = true }
python-igraph = { version = "*", optional = true }

[tool.poetry.extras]
bel = [
    "pybel",
    "bio2bel",
    "click",
]
graph = [
    "python-igraph",
]

[tool.poetry.dev-dependencies]
bump2version = "*"
sphinx = ">=5.0.0"
sphinx-rtd-theme = ">=1.0.0"
sphinx-last-updated-by-git = ">=0.3"
sphinx-autodoc-typehints = ">=1.18.0"

[tool.poetry.scripts]
bio2bel_omnipath = "pypath.omnipath.bel:main"

[tool.poetry.plugins."bio2bel"]
omnipath = "pypath.omnipath.bel"
